[package]
name = "bear-tools-vite-react"
version = "0.0.1"
description = "Bear-Tools"
authors = ["BearV <zhuzhaoxio@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = ["api-all"] }
clipboard = "0.5.0" # copy tools
chrono = "0.4.19" # timestamp tools
data-encoding = "2.3.2" # base_hex tools
ipnetwork = "0.20.0" # cidr tools


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
